--- a/pages/styles.scss
+++ b/pages/styles.scss
@@ -106,6 +106,7 @@
 
 }
 
+
 @media (max-width: 992px) {
     body {
         font-size: 16px;
@@ -147,5 +148,14 @@
     body {
         font-size: 10px;
     }
+
+    $grid-breakpoints: (
+        xs: 0,
+        sm: 576px,
+        md: 768px,
+        lg: 992px,  
+        xl: 1200px,
+        xxl: 1400px
+        );
 
 }
