--- a/partials/_body.scss
+++ b/partials/_body.scss
@@ -1,11 +1,12 @@
-body {
-    background-color: #F29BDB;
-    $font-mate: 'Mate SC', serif;
-    $font-ibarra : 'Ibarra Real Nova', serif;
-    size: 50em;
-    color: rgb(0, 0, 0);
+$font-ibarra: 'Ibarra Real Nova', serif;
+$font-mate: 'Mate SC', serif;
 
-  }
+.body {
+  font-family: $font-ibarra;
+  background-color: #CFF2AC;
+  size: 10em;
+  color: rgb(12, 12, 12);
+}
 
   body .contenedor {
     width: 50%;
@@ -15,6 +16,7 @@ body {
     margin: 50px auto;
   }
 
-  
+
+
 
   
