edicion con correcciones

--- a/partials/_body.scss
+++ b/partials/_body.scss
@@ -1,20 +1,27 @@
-$font-ibarra: 'Ibarra Real Nova', serif;
-$font-mate: 'Mate SC', serif;
+
+$font-ibarra: 'Mate SC', serif;
+
 
 .body {
   font-family: $font-ibarra;
   background-color: #CFF2AC;
-  size: 10em;
+  size: 50em;
   color: rgb(12, 12, 12);
 }
 
-  body .contenedor {
+.body .contenedor {
     width: 50%;
     border-radius:  10px;
     padding: 50px;
     text-align: center;
     margin: 50px auto;
   }
+
+  .card-text {
+    align-items: center;
+    text-size-adjust:initial;
+  }
+
 
 
 
