--- a/partials/_generales.scss
+++ b/partials/_generales.scss
@@ -3,7 +3,7 @@ $form-floating-line-height: 1.5;
 
 header {
     justify-content: space-between;
-    & hover {
+    & :hover {
      background-color: #F29BDB ;
 }
 }
@@ -72,12 +72,12 @@ div {
  
  .field input {
    display: block;
-   min-width: 250px;
+   min-width: 500px;
    line-height: 1.5;
    font-size: 14px;
  }
  
- input[type="submit"] {
+ .input[type="submit"] {
    display: block;
    padding: 6px 30px;
    font-size: 14px;
@@ -113,7 +113,7 @@ div {
 }
 
 .articulo {
-   font-family: $font-mate;
+   font-family: $font-ibarra;
    font-size: 1.8em;
    text-decoration: dotted;
    text-transform:initial;
@@ -121,25 +121,21 @@ div {
 }
 
 .ubicacion {
-   font-family: $font-mate;
+   font-family: $font-ibarra;
    font-size: 1.5625em;
    text-decoration: dotted;
    text-align: left;
 }
 
-.mainprendas {
-   width: 50em;
-}
-
 .colaboramos {
-   font-family: $font-mate;
+   font-family: $font-ibarra;
    font-size: 1.5em;
    text-decoration: dotted;
    text-align: left;
 }
 
 .alimento {
-   font-family: $font-mate;
+   font-family: $font-ibarra;
    font-size: 2em;
    text-decoration: dotted;
    text-align: left;
@@ -159,6 +155,11 @@ div {
 
 .carouselExampleDark {
    width: 50%;
+}
+
+.form {
+   justify-content: center;
+   width: fit-content;
 }
  
  
