--- a/partials/_mediaqueries.scss
+++ b/partials/_mediaqueries.scss
@@ -1,13 +1,14 @@
 @media (max-width: 1200px) {
-    body {
-        font-size: 20px;
+   .body {
+        font-size: 25px;
     }
 
 }
 
 @media (max-width: 992px) {
-    body {
-        font-size: 16px;
+    .body {
+        font-size: 18px;
+        
     }
 
     .header {
@@ -44,8 +45,8 @@
         height: 10em;
     }
 
-    body {
-        font-size: 10px;
+    .body {
+        font-size: 15px;
     }
 
    }
