--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,6 +1,13 @@
 @import "../partials/body";
 @import "../partials/colores";
-@import "../partials/generales";
 @import "../partials/mediaqueries";
+@import "../partials/generales"
+
 @import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova&family=Mate+SC&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+
+
+
+
+
+
