--- a/partials/_mediaqueries.scss
+++ b/partials/_mediaqueries.scss
@@ -35,7 +35,7 @@
  
  @media (max-width: 576px) {
      .sectiongrid {
-         grid-template-columns: 1fr
+         grid-template-columns: 1fr;
      }
  
      .ropa ul li img {
