--- a/partials/_body.scss
+++ b/partials/_body.scss
@@ -2,7 +2,9 @@ $font-ibarra: 'Mate SC', serif;
 
 .body {
   font-family: $font-ibarra;
-  background-color: #CFF2AC;
+  background: #ef32d9; 
+  background: -webkit-linear-gradient(to bottom, #89fffd, #ef32d9);  
+  background: linear-gradient(to bottom, #89fffd, #ef32d9); 
   size: 50em;
   color: rgb(12, 12, 12);
 }
