--- a/partials/_colores.scss
+++ b/partials/_colores.scss
@@ -1,7 +1,8 @@
 $colornav: rgb(46, 147, 214);
-$colorwhatsapp: rgb(34, 151, 34);
+$colorwhatsapp: rgb(34, 151, 34); 
 $colorfacebook: rgb(11, 11, 192);
 $colorinstagram: rgb(121, 24, 83);
+$colorgmail: rgb(237, 4, 4);
 $colorbody: rgb(15, 15, 15);
 
 .bi-whatsapp {
