--- a/partials/_generales.scss
+++ b/partials/_generales.scss
@@ -14,7 +14,7 @@ main {
 }
 
 div {
-   background-color: #cff2ac;
+ 
    p {
       color: rgb(0, 0, 0);
    }
@@ -49,12 +49,13 @@ body {
 }
 
 .mapa {
+   margin-top: 5px;
    align-items: center;
 }
 
 
 .footer {
-   background-color: #99d9f2 ;
+   /*background-color: #99d9f2 ;*/
    justify-content: center;
    align-items: right;
 } 
