--- a/sass/estilos.css
+++ b/sass/estilos.css
@@ -1,26 +1,116 @@
-@import url("https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova&family=Mate+SC&display=swap");
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
-.body {
-  font-family: "Mate SC", serif;
-  background-color: #CFF2AC;
-  size: 50em;
-  color: rgb(12, 12, 12);
+/*@import url("https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova&family=Mate+SC&display=swap");
+*/@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+/*Cambio en fuente*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+
+body {
+  /*font-family: "Mate SC", serif;*/
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  background: #ef32d9; 
+background: -webkit-linear-gradient(to bottom, #89fffd, #ef32d9);  
+background: linear-gradient(to bottom, #89fffd, #ef32d9); 
+
+  /*color: rgb(12, 12, 12);*/
+  color: rgb(29, 27, 27);
 }
 
-.body .contenedor {
+/*Resolver a que responde esta clase*/
+/*.body .contenedor {
   width: 50%;
   border-radius: 10px;
   padding: 50px;
   text-align: center;
   margin: 50px auto;
+}*/
+
+
+/***********************Header*****************************/
+
+header {
+  justify-content: space-between;
+
+}
+header :hover {
+  background-color: #f29bdb;
 }
 
-.card-text {
-  align-items: center;
-  -webkit-text-size-adjust: initial;
-     -moz-text-size-adjust: initial;
-          text-size-adjust: initial;
+ul {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
 }
+ul li a {
+  color: #f29bdb;
+}
+
+
+/*Ubicar esto*/
+body .tituloprincipal {
+  text-shadow: rgb(46, 147, 214) 5px 5px;
+  text-align: center;
+  -webkit-text-size-adjust: 50em;
+     -moz-text-size-adjust: 50em;
+          text-size-adjust: 50em;
+}
+body .carouselExampleDark {
+  width: 50%;
+}
+body .form {
+  justify-content: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+
+/******************************MAIN***********************************/
+/*.col{
+  width: 95%;
+}*/
+
+main {
+  padding: 20px;
+  /*background-color: #f29bdb;*/
+  
+  
+}
+
+/*.main-section {
+  background: #39bbd8;  
+  background: -webkit-linear-gradient(to bottom, #85e5fa, #39bbd8);  
+  background: linear-gradient(to bottom, #85e2f7, #39bbd8); 
+  
+  */
+
+  display: grid;
+  grid-column: 1/3; /*mejorar esto*/
+
+}
+
+
+p {
+  color: rgb(29, 27, 27);
+}
+
+.img-radio{
+ 
+  border-radius: 15px 50px;
+
+}
+
+
+
+
+/****************************FOOTER***********************************/
+.footer {
+  /*background: #39bbd8; */
+  height: 10vh;
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+}/*# sourceMappingURL=estilos.css.map */
 
 .bi-whatsapp {
   color: rgb(34, 151, 34);
@@ -35,6 +125,94 @@
   color: rgb(11, 11, 192);
   padding-right: 2cm;
 }
+
+
+
+/*******************************************************PRENDAS/cards-grid*********************************************/
+.container-prendas {
+  width: 100%;
+  height: 100%;
+  /*background-color: #e2e2e2;*/
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  /* grid-auto-rows: max-content; */
+  gap: 1rem;
+}
+
+.card {
+  background: #f2f2f2;
+  font-size: 1rem;
+  border-radius: 7px;
+  box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.2), 0 0 3px 0 rgba(0, 0, 0, 0.2);
+  transition: all 0.3s;
+}
+.crdimg {
+  width: 95%;
+  border-radius: 7px;
+  object-fit: cover;
+  margin-top: 5px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  transition: all 0.3s;
+}
+
+.card h2 {
+  padding-inline: 10px;
+  transition: all 0.3s;
+}
+
+.card p {
+  padding-inline: 10px;
+  transition: all 0.1s;
+}
+
+.card:hover {
+  box-shadow: 6px 6px 8px 0 rgba(0, 0, 0, 0.4), 0 0 3px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card:hover .crdimg {
+  width: 100%;
+  margin-top: 0;
+}
+
+.card:hover h2 {
+  font-size: 1.75rem;
+  margin-top: 14px;
+  margin-bottom: 16px;
+}
+
+.card:hover p {
+  font-weight: 500;
+}
+ 
+/**************************************FECHAS****************************************************/
+.card-group{display: flex;
+    flex-flow: row wrap;
+    margin: 2em;
+    padding: 2em;
+}
+
+/**************************************CONTACTO*****************************************************/
+
+.colaboramos{
+  display: flex;
+  justify-content:center;
+ margin-top: 2em;
+}
+
+.margen{
+  margin: 20px;
+}
+
+.button {
+  width: 100%;
+}
+
+
+
+
+/*************************MEDIA QUERIES*******************************/
+
 
 @media (max-width: 1200px) {
   .body {
@@ -75,55 +253,3 @@
     font-size: 15px;
   }
 }
-header {
-  justify-content: space-between;
-}
-header :hover {
-  background-color: #f29bdb;
-}
-
-main {
-  padding: 20px;
-  background-color: #f29bdb;
-  font-family: "Mate SC", serif;
-}
-
-div {
-  background-color: #cff2ac;
-}
-div p {
-  color: rgb(0, 0, 0);
-}
-
-ul {
-  display: flex;
-  width: 500px;
-  justify-content: space-evenly;
-  list-style: none;
-}
-ul li a {
-  color: #f29bdb;
-}
-
-body .tituloprincipal {
-  text-shadow: rgb(46, 147, 214) 5px 5px;
-  text-align: center;
-  -webkit-text-size-adjust: 50em;
-     -moz-text-size-adjust: 50em;
-          text-size-adjust: 50em;
-}
-body .carouselExampleDark {
-  width: 50%;
-}
-body .form {
-  justify-content: center;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.footer {
-  background-color: #99d9f2;
-  justify-content: center;
-  align-items: center;
-}/*# sourceMappingURL=estilos.css.map */
