--- a/partials/_body.scss
+++ b/partials/_body.scss
@@ -9,7 +9,7 @@ $font-ibarra: 'Mate SC', serif;
   color: rgb(12, 12, 12);
 }
 
-.body .contenedor {
+/*.body .contenedor {
     width: 50%;
     border-radius:  10px;
     padding: 50px;
@@ -20,4 +20,4 @@ $font-ibarra: 'Mate SC', serif;
   .card-text {
     align-items: center;
     text-size-adjust:initial;
-  }
+  }*/
