--- a/sass/estilos.css
+++ b/sass/estilos.css
@@ -9,8 +9,8 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   background: #ef32d9; 
-background: -webkit-linear-gradient(to bottom, #89fffd, #ef32d9);  
-background: linear-gradient(to bottom, #89fffd, #ef32d9); 
+  background: -webkit-linear-gradient(to bottom, #89fffd, #ef32d9);  
+  background: linear-gradient(to bottom, #89fffd, #ef32d9); 
 
   /*color: rgb(12, 12, 12);*/
   color: rgb(29, 27, 27);
@@ -30,10 +30,14 @@ background: linear-gradient(to bottom, #89fffd, #ef32d9);
 
 header {
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
 
 }
 header :hover {
   background-color: #f29bdb;
+  margin: 0;
+  padding: 0;
 }
 
 ul {
@@ -66,46 +70,32 @@ body .form {
 
 
 /******************************MAIN***********************************/
-/*.col{
-  width: 95%;
-}*/
 
 main {
-  padding: 20px;
-  /*background-color: #f29bdb;*/
-  
-  
+  padding: 20px; 
 }
 
-/*.main-section {
-  background: #39bbd8;  
-  background: -webkit-linear-gradient(to bottom, #85e5fa, #39bbd8);  
-  background: linear-gradient(to bottom, #85e2f7, #39bbd8); 
-  
-  */
-
+.main-section {
   display: grid;
   grid-column: 1/3; /*mejorar esto*/
 
 }
-
 
 p {
   color: rgb(29, 27, 27);
 }
 
 .img-radio{
- 
   border-radius: 15px 50px;
-
 }
 
 
 
 
 /****************************FOOTER***********************************/
+
+
 .footer {
-  /*background: #39bbd8; */
   height: 10vh;
   display: flex;
   justify-content:space-around;
@@ -128,7 +118,8 @@ p {
 
 
 
-/*******************************************************PRENDAS/cards-grid*********************************************/
+/*************************PRENDAS/cards-grid****************************/
+
 .container-prendas {
   width: 100%;
   height: 100%;
@@ -185,19 +176,20 @@ p {
   font-weight: 500;
 }
  
-/**************************************FECHAS****************************************************/
+/**********************************FECHAS******************************************/
+
 .card-group{display: flex;
     flex-flow: row wrap;
     margin: 2em;
     padding: 2em;
 }
 
-/**************************************CONTACTO*****************************************************/
+/********************************CONTACTO*****************************************/
 
 .colaboramos{
   display: flex;
   justify-content:center;
- margin-top: 2em;
+ margin-top: 1em;
 }
 
 .margen{
